--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -1,2 +1,27 @@
+# IMAGE PREVIEW
 set preview_images true
 set preview_images_method kitty
+
+# WINDOW TITLE
+set update_title true
+set tilde_in_titlebar true
+set shorten_title 1
+
+# LINE/LIST SETTINGS
+set line_numbers relative
+set one_indexed true
+set wrap_scroll true
+default_linemode devicons
+
+# PATH SPECIFIC OPTIONS
+setlocal path=~/downloads sort mtime
+
+# SHOW VERSION CONTROL INFORMATION
+set vcs_aware true
+
+# KEYBINDS
+map cz console	z%space
+map <C-t>	tab_new
+map <C-w>	tab_close
+map <C-TAB>     tab_move 1
+map <C-S-TAB>   tab_move -1  # fun fact: this doesn't work
