--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
 [submodule ".config/awesome/keyboard_layout"]
 	path = .config/awesome/keyboard_layout
 	url = git@github.com:echuraev/keyboard_layout.git
+[submodule ".config/ranger/plugins/ranger_devicons"]
+	path = .config/ranger/plugins/ranger_devicons
+	url = https://github.com/alexanderjeurissen/ranger_devicons
