--- a/.config/awesome/picom/picom.conf
+++ b/.config/awesome/picom/picom.conf
@@ -5,9 +5,9 @@ vsync = true;
 
 glx-no-stencil = false;
 glx-copy-from-front = false; # When enbled on intel GPU: screen broken until compton is killed.
-glx-swap-method = 1
+glx-swap-method = 1;
 
-unredir-if-possible = true
+unredir-if-possible = false;
 
 # === Rules ===
 shadow-exclude = [
