--- a/.config/awesome/picom/picom.conf
+++ b/.config/awesome/picom/picom.conf
@@ -63,9 +63,11 @@ no-fading-openclose = false;
 # === Blur ===
 
 blur: {
-    method = "gaussian";
-    size = 20;
-    deviation = 500.0;
+    #method = "gaussian";
+    #size = 20;
+    #deviation = 500.0;
+    method = "dual_kawase";
+    strength = 6;
     background = true;
     background-frame = true;
     background-fixed = true;
@@ -79,16 +81,16 @@ blur-background-exclude = [
 
 # === Rounded Corners ===
 
-corner-radius = 25.0;
-rounded-corners-exclude = [
-    "window_type = 'dock'",
-    "_NET_WM_WINDOW_TYPE@:a *= 'MENU'",
-    "window_type *= 'menu'",
-    "window_type = 'utility'",
-    "window_type = 'dropdown_menu'",
-    "window_type = 'popup_menu'",
-    "class_g ?= 'awesome'",
-    "class_g ?= 'slop'",
-    "class_g ?= 'xfce4-screenshooter'",
-    "class_g ?= 'mpv'"
-];
+#corner-radius = 25.0;
+#rounded-corners-exclude = [
+#    "window_type = 'dock'",
+#    "_NET_WM_WINDOW_TYPE@:a *= 'MENU'",
+#    "window_type *= 'menu'",
+#    "window_type = 'utility'",
+#    "window_type = 'dropdown_menu'",
+#    "window_type = 'popup_menu'",
+#    "class_g ?= 'awesome'",
+#    "class_g ?= 'slop'",
+#    "class_g ?= 'xfce4-screenshooter'",
+#    "class_g ?= 'mpv'"
+#];
