fixed ranger Downloads sort config

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -14,7 +14,7 @@ set wrap_scroll true
 default_linemode devicons
 
 # PATH SPECIFIC OPTIONS
-setlocal path=~/downloads sort mtime
+setlocal path=~/Downloads sort mtime
 
 # SHOW VERSION CONTROL INFORMATION
 set vcs_aware true
