--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -4,24 +4,24 @@ print_info() {
     info title
     info underline
 
-    info "Distro" distro
-    info "Uptime" uptime
-    info "Machine" model
-    info "CPU" cpu
-    info "GPU" gpu
-    info "Resolution" resolution
-    info "Memory" memory
+    info "" distro
+    info "" uptime
+    info "" model
+    info "" cpu
+    info "" gpu
+    info "" resolution
+    info "" memory
     info underline
-    info "Packages" packages
-    info "Shell" shell
+    info "" packages
+    info "" shell
     info "DE" de
-    info "WM" wm
-    info "WM Theme" wm_theme
-    info "Theme" theme
-    info "Icons" icons
-    info "Terminal" term
-    info "Terminal Font" term_font
-
+    info "ﬓ" wm
+    info "ﬓ" wm_theme
+    info "" theme
+    info "" icons
+    info "" term
+    
+    # info "Terminal Font" term_font
     # info "Kernel" kernel
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
@@ -549,7 +549,7 @@ underline_char="-"
 # Example:
 # separator="->":   'Shell-> bash'
 # separator=" =":   'WM = dwm'
-separator=":"
+separator="​"
 
 
 # Color Blocks
