more neofetch icons

--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -14,9 +14,9 @@ print_info() {
     info underline
     info "" packages
     info "" shell
-    info "DE" de
+    info "" de
     info "ﬓ" wm
-    info "ﬓ" wm_theme
+    info "ﬓ " wm_theme
     info "" theme
     info "" icons
     info "" term
