--- a/.config/awesome/picom/picom.conf
+++ b/.config/awesome/picom/picom.conf
@@ -24,7 +24,10 @@ shadow-exclude = [
 
     "_NET_WM_WINDOW_TYPE:a = '_NET_WM_WINDOW_TYPE_NOTIFICATION'",
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
-    "_GTK_FRAME_EXTENTS@:c"
+    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_FULLSCREEN'",
+    #"_NET_WM_STATE@:32a = '_NET_WM_STATE_MAXIMIZED_VERT' && _NET_WM_STATE@:32a = '_NET_WM_STATE_MAXIMIZED_HORZ'",
+    "_GTK_FRAME_EXTENTS@:c",
+    "! name~=''"
 ]
 
 opacity-rule = []
@@ -38,7 +41,9 @@ focus-exclude = [
     "window_type *= 'menu'",
     "window_type = 'utility'",
     "window_type = 'dropdown_menu'",
-    "window_type = 'popup_menu'"
+    "window_type = 'popup_menu'",
+
+    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_FULLSCREEN'",
 ]
 
 fade-exclude = []
@@ -76,7 +81,9 @@ blur: {
 blur-background-exclude = [
     "class_g ?= 'slop'",
     "class_g ?= 'xfce4-screenshooter'",
-    "window_type = 'dock'"
+    "window_type = 'dock'",
+
+    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_FULLSCREEN'",
 ];
 
 # === Rounded Corners ===
