--- a/.config/awesome/picom/picom.conf
+++ b/.config/awesome/picom/picom.conf
@@ -21,7 +21,7 @@ shadow-exclude = [
     "window_type = 'dock'",
     "window_type = 'dropdown_menu'",
     "window_type = 'popup_menu'",
-
+    "name = 'oneko'",
     "_NET_WM_WINDOW_TYPE:a = '_NET_WM_WINDOW_TYPE_NOTIFICATION'",
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_FULLSCREEN'",
