better sort config for lsd

--- a/.config/lsd/config.yaml
+++ b/.config/lsd/config.yaml
@@ -97,10 +97,10 @@ size: default
 sorting:
   # Specify what to sort by.
   # Possible values: extension, name, time, size, version
-  column: name
+  column: time
   # Whether to reverse the sorting.
   # Possible values: false, true
-  reverse: false
+  reverse: true
   # Whether to group directories together and where.
   # When "classic" is set, this is set to "none".
   # Possible values: first, last, none
