--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -2,6 +2,7 @@ ytdl-format=bestvideo[height<=?1080][fps<=?60][vcodec!=?vp9]+bestaudio/best
 volume=50
 auto-sub=fuzzy
 profile=gpu-hq
+hwdec=auto
 video-sync=display-resample
 video-sync-max-video-change=100
 interpolation
