kitty+nvim: make ctrl+tab and ctrl+shift+tab work properly

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,11 +7,8 @@ font_family FiraCode Nerd Font Mono
 font_size   14.0
 
 # KEYBINDS
-#map ctrl+tab        next_tab
-#map ctrl+shift+tab  previous_tab
-#map ctrl+t          new_tab
-#map ctrl+w          close_tab
-#map ctrl+q          close_window
+map ctrl+tab        send_text normal,application \x1b[9;5u
+map ctrl+shift+tab  send_text normal,application \x1b[9;6u
 
 # MISC
 enable_audio_bell yes
