--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,6 @@
 [submodule ".config/ranger/plugins/ranger_devicons"]
 	path = .config/ranger/plugins/ranger_devicons
 	url = https://github.com/alexanderjeurissen/ranger_devicons
+[submodule ".config/pegasus-frontend/themes/gameOS"]
+	path = .config/pegasus-frontend/themes/gameOS
+	url = git@github.com:PlayingKarrde/gameOS.git
