--- a/.config/awesome/picom/picom.conf
+++ b/.config/awesome/picom/picom.conf
@@ -21,13 +21,15 @@ shadow-exclude = [
     "window_type = 'dock'",
     "window_type = 'dropdown_menu'",
     "window_type = 'popup_menu'",
+    "window_type = 'tooltip'",
     "name = 'oneko'",
     "_NET_WM_WINDOW_TYPE:a = '_NET_WM_WINDOW_TYPE_NOTIFICATION'",
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_FULLSCREEN'",
     #"_NET_WM_STATE@:32a = '_NET_WM_STATE_MAXIMIZED_VERT' && _NET_WM_STATE@:32a = '_NET_WM_STATE_MAXIMIZED_HORZ'",
     "_GTK_FRAME_EXTENTS@:c",
-    "! name~=''"
+    "! name~=''",
+    "name = 'ActivateWindows'"
 ]
 
 opacity-rule = []
@@ -81,7 +83,11 @@ blur: {
 blur-background-exclude = [
     "class_g ?= 'slop'",
     "class_g ?= 'xfce4-screenshooter'",
-    "window_type = 'dock'",
+    #"window_type = 'dock'",
+    "window_type = 'dropdown_menu'",
+    "window_type = 'popup_menu'",
+    "window_type = 'tooltip'",
+    "name = 'ActivateWindows'",
 
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_FULLSCREEN'",
 ];
