--- a/.gitmodules
+++ b/.gitmodules
@@ -29,3 +29,12 @@
 [submodule ".config/awesome/bling"]
 	path = .config/awesome/bling
 	url = git@github.com:BlingCorp/bling.git
+[submodule ".config/awesome/awesome-wm-widgets"]
+	path = .config/awesome/awesome-wm-widgets
+	url = git@github.com:streetturtle/awesome-wm-widgets.git
+[submodule ".config/awesome/assault"]
+	path = .config/awesome/assault
+	url = git@github.com:NuckChorris/assault.git
+[submodule ".config/awesome/external/json_lua"]
+	path = .config/awesome/external/json_lua
+	url = git@github.com:rxi/json.lua.git
