awesome: Crylia dock (very cool) - had to tweak picom to be more bad (i hope i can add special identification stuff to AwesomeWM widgets) - super WIP, check out the new included Crylia dock README.md exclusive to the Crylia dock directory (available nowhere else, only FREE.99!)

--- a/.config/awesome/picom/picom.conf
+++ b/.config/awesome/picom/picom.conf
@@ -90,6 +90,7 @@ blur-background-exclude = [
     "name = 'ActivateWindows'",
 
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_FULLSCREEN'",
+    "_NET_WM_WINDOW_TYPE@:a *= '_NET_WM_WINDOW_TYPE_DOCK'",
 ];
 
 # === Rounded Corners ===
