kitty: ok so it turns out kitty themes can include metadata, which is a major gaming moment 😎

--- a/.config/kitty/themes/sonokai-shusia.conf
+++ b/.config/kitty/themes/sonokai-shusia.conf
@@ -1,3 +1,8 @@
+## name: Sonokai Shusia
+## author: original by Sainnhe Park (https://github.com/sainnhe), converted by Octelly (https://github.com/Johnystar)
+## license: original license is MIT
+## blurb: Monokai, but the colours are more mellowed out.
+
 # special
 foreground           #e3e1e4
 background           #2d2a2e
