ranger: stuff's based

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -2,6 +2,8 @@
 set preview_images true
 set preview_images_method kitty
 
+set preview_script ~/.config/ranger/scope.sh
+
 # WINDOW TITLE
 set update_title true
 set tilde_in_titlebar true
@@ -25,3 +27,4 @@ map <C-t>	tab_new
 map <C-w>	tab_close
 map <C-TAB>     tab_move 1
 map <C-S-TAB>   tab_move -1  # fun fact: this doesn't work
+map <C-d> shell dragon-drop -a -x %p
