awesome, picom: Ubisoft Connect visual fixes

--- a/.config/awesome/picom/picom.conf
+++ b/.config/awesome/picom/picom.conf
@@ -15,6 +15,7 @@ shadow-exclude = [
     "class_g ?= 'xfce4-screenshooter'",
     "class_g ?= 'Visualizer'",
     "class_g ?= 'rofi'",
+    "class_g ?= 'upc.exe'",
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
     "window_type *= 'menu'",
     "window_type = 'utility'",
@@ -83,6 +84,7 @@ blur: {
 blur-background-exclude = [
     "class_g ?= 'slop'",
     "class_g ?= 'xfce4-screenshooter'",
+    "class_g ?= 'upc.exe'",
     #"window_type = 'dock'",
     "window_type = 'dropdown_menu'",
     "window_type = 'popup_menu'",
