chromium: better flags

--- a/.config/chromium-flags.conf
+++ b/.config/chromium-flags.conf
@@ -1,2 +1,4 @@
 --force-dark-mode
---enable-features=WebUIDarkMode
+--enable-features=WebUIDarkMode,VaapiVideoDecoder
+--use-gl=egl
+--disable-features=UseChromeOSDirectVideoDecoder
