awesome-wip: this might be the first wip config push, not sure, but sure as heck ain't ready for use yet

--- a/.config/awesome_wip/.luarc.json
+++ b/.config/awesome_wip/.luarc.json
@@ -10,5 +10,8 @@
   ],
   "workspace.library": [
     "~/.local/share/awesome-emmylua/lua"
+  ],
+  "diagnostics.disable": [
+    "lowercase-global"
   ]
 }
