--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,7 +3,8 @@ include ./themes/sonokai-shusia.conf
 background_opacity 0.9
 
 # FONTS
-font_family FiraCode Nerd Font Mono
+#font_family FiraCode Nerd Font Mono
+font_family CartographCF
 font_size   14.0
 
 # KEYBINDS
